<resources>
    <string name="app_name">ExampleRest</string>
    <string name="name">ИМЯ:</string>
    <string name="last_name">ФАМИЛИЯ:</string>
    <string name="phone">ТЕЛЕФОН:</string>
    <string name="email">E-MAIL:</string>
    <string name="reload_button">ОБНОВИТЬ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>